# gtaf-mcp

./: .gitignore  LICENSE  README.md  main.py  mcp.json  pyproject.toml  testcase_notes_function.py  wrangler.toml
src/mcpserver/: __main__.py  deployment.py  service.py
src/mcpserver/facade/: __init__.py  knowledge_db.py  result_client.py
src/resources/template/rca/: template_test_failure_analysis.html  template_test_failure_analysis.md
