[project]
name = "gtaf-mcp"
version = "0.1.0"
description = "grubtech-mcp for test automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
